--- a/package.json
+++ b/package.json
@@ -54,33 +54,30 @@
   "scripts": {
     "prettier": "prettier --write . --ignore-path ./src/.prettierignore",
     "base": "cat src/base/*.css > dist/base.css",
-    "postbase": "prejss-cli dist/base.css --format commonjs",
     "components": "cat src/components/*.css > dist/components.css",
-    "postcomponents": "prejss-cli dist/components.css --format commonjs",
     "utilities": "cat src/utilities/*.css > dist/utilities.css",
-    "postutilities": "prejss-cli dist/utilities.css --format commonjs",
     "build": "NODE_ENV=production && npm run base && npm run components && npm run utilities"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.4",
+    "postcss": "^8.4.23",
     "postcss-cli": "10.1.0",
     "postcss-import": "15.1.0",
     "postcss-nested": "6.0.1",
-    "prejss-cli": "0.3.3",
     "prettier": "^2.7.1",
     "standard-version": "^9.5.0"
   },
   "dependencies": {
-    "color": "^4.2",
-    "picocolors": "^1.0.0",
-    "tailwindcss": "^3",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.3",
-    "@tailwindcss/typography": "^0.5.9"
+    "@tailwindcss/typography": "^0.5.9",
+    "color": "^4.2",
+    "picocolors": "^1.0.0",
+    "tailwindcss": "^3"
   },
   "peerDependencies": {
     "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.21",
+    "postcss": "^8.4.23",
     "tailwindcss": "^3"
   },
   "engines": {
