adding the js builder again

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@aegov/design-system",
-  "version": "0.0.6",
+  "version": "0.0.10",
   "description": "A design system for the Government of the United Arab Emirates. The design system has been created based on research and information collected from in-depth studies conducted on user behaviour and benchmarking best practices. The primary use of this design system is to allow ministries of the United Arab Emirates to create consistent websites with components that are common and acceissible.",
   "keywords": [
     "design-system",
@@ -37,11 +37,6 @@
     "type": "git",
     "url": "git+https://github.com/TDRA-ae/aegov-dls.git"
   },
-  "files": [
-    "dist/*.js",
-    "src/index.js",
-    "src/colors/*.js"
-  ],
   "browserslist": [
     "> 7%"
   ],
@@ -54,9 +49,13 @@
   "scripts": {
     "prettier": "prettier --write . --ignore-path ./src/.prettierignore",
     "base": "cat src/base/*.css > dist/base.css",
+    "postbase": "prejss-cli dist/base.css --format commonjs",
     "components": "cat src/components/*.css > dist/components.css",
+    "postcomponents": "prejss-cli dist/components.css --format commonjs",
     "utilities": "cat src/utilities/*.css > dist/utilities.css",
-    "build": "NODE_ENV=production && npm run base && npm run components && npm run utilities"
+    "postutilities": "prejss-cli dist/utilities.css --format commonjs",
+    "build": "NODE_ENV=production && npm run base && npm run components && npm run utilities",
+    "install": "npm run build"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.4",
@@ -64,6 +63,7 @@
     "postcss-cli": "10.1.0",
     "postcss-import": "15.1.0",
     "postcss-nested": "6.0.1",
+    "prejss-cli": "0.3.3",
     "prettier": "^2.7.1",
     "standard-version": "^9.5.0"
   },
