--- a/package.json
+++ b/package.json
@@ -48,30 +48,59 @@
   },
   "scripts": {
     "prettier": "prettier --write . --ignore-path ./src/.prettierignore",
-    "base": "cat src/base/*.css > dist/base.css",
+    "base": "mkdir -p dist && postcss src/base/common.css -o dist/base.css --config src/base",
     "postbase": "prejss-cli dist/base.css --format commonjs",
-    "components": "cat src/components/*.css > dist/components.css",
+    "components": "mkdir -p dist && postcss src/components/components.css -o dist/components.css --config src/components",
     "postcomponents": "prejss-cli dist/components.css --format commonjs",
-    "blocks": "postcss src/blocks/*.css -o dist/blocks.css --config src/blocks",
+    "blocks": "mkdir -p dist && postcss src/blocks/blocks.css -o dist/blocks.css --config src/blocks",
     "postblocks": "prejss-cli dist/blocks.css --format commonjs",
-    "utilities": "cat src/utilities/*.css > dist/utilities.css",
+    "utilities": "mkdir -p dist && postcss src/utilities/util.css -o dist/utilities.css --config src/utilities",
     "postutilities": "prejss-cli dist/utilities.css --format commonjs",
-    "build": "NODE_ENV=production && npm run base && npm run components && npm run blocks && npm run utilities",
-    "prepare": "npm run build"
+    "build:webpack": "webpack --mode=production",
+    "build:js": "run-s build:webpack",
+    "copy:js:dist": "copyfiles --flat static/*.js dist && copyfiles --flat static/*.js.map dist",
+    "build:dist": "mkdir -p dist && run-s build:js copy:js:dist",
+    "clean:dist": "shx rm -rf dist",
+    "build:npm": "run-s clean:lib build:lib clean:dist build:dist",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx --ignore-path .gitignore",
+    "build": "NODE_ENV=production run-s base components blocks utilities build:webpack copy:js:dist"
   },
   "devDependencies": {
+    "@babel/core": "^7.14.8",
+    "@babel/preset-env": "^7.14.8",
+    "@typescript-eslint/eslint-plugin": "^5.60.1",
+    "@typescript-eslint/parser": "^5.60.1",
     "autoprefixer": "^10.0.4",
+    "babel-loader": "^8.2.2",
+    "copyfiles": "^2.4.1",
+    "core-js": "^3.8.1",
+    "eslint": "^8.44.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-tailwindcss": "^3.13.0",
+    "file-loader": "^6.2.0",
+    "npm-run-all": "^4.1.5",
+    "picocolors": "^1.0.0",
     "postcss": "^8.4.23",
     "postcss-cli": "10.1.0",
     "postcss-import": "15.1.0",
     "postcss-nested": "6.0.1",
+    "postcss-preset-env": "^6.7.0",
     "prejss-cli": "0.3.3",
     "prettier": "^2.7.1",
+    "prettier-plugin-tailwindcss": "^0.2.1",
+    "shx": "^0.3.4",
+    "source-map-loader": "^4.0.0",
     "standard-version": "^9.5.0",
-    "color": "^4.2",
-    "picocolors": "^1.0.0"
+    "ts-loader": "^9.4.2",
+    "typescript": "^5.1.0",
+    "webpack": "^5.88.0",
+    "webpack-cli": "^5.1.4",
+    "yarn": "^1.22.10"
   },
   "dependencies": {
+    "@babel/plugin-transform-runtime": "^7.22.5",
+    "@popperjs/core": "^2.11.8",
     "@tailwindcss/forms": "^0.5.3",
     "tailwindcss": "^3"
   },
