--- a/package.json
+++ b/package.json
@@ -69,24 +69,23 @@
     "@babel/core": "^7.14.8",
     "@babel/preset-env": "^7.14.8",
     "@babel/plugin-transform-runtime": "^7.22.5",
-    "@typescript-eslint/eslint-plugin": "^5.60.1",
-    "@typescript-eslint/parser": "^5.60.1",
-    "autoprefixer": "^10.0.4",
+    "@typescript-eslint/eslint-plugin": "^5.46.1",
+    "@typescript-eslint/parser": "^5.46.1",
     "babel-loader": "^8.2.2",
     "copyfiles": "^2.4.1",
     "core-js": "^3.8.1",
-    "eslint": "^8.44.0",
-    "eslint-config-prettier": "^8.8.0",
+    "eslint": "^8.29.0",
+    "eslint-config-prettier": "^8.0.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-tailwindcss": "^3.13.0",
+    "eslint-plugin-tailwindcss": "^3.7.1",
     "file-loader": "^6.2.0",
     "npm-run-all": "^4.1.5",
     "picocolors": "^1.0.0",
-    "postcss": "^8.4.23",
-    "postcss-cli": "10.1.0",
+    "postcss-cli": "^8.3.1",
+    "postcss-loader": "^4.3.0",
+    "postcss-preset-env": "^6.7.0",
     "postcss-import": "15.1.0",
     "postcss-nested": "6.0.1",
-    "postcss-preset-env": "^6.7.0",
     "prejss-cli": "0.3.3",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.2.1",
@@ -94,9 +93,9 @@
     "source-map-loader": "^4.0.0",
     "standard-version": "^9.5.0",
     "ts-loader": "^9.4.2",
-    "typescript": "^5.1.0",
-    "webpack": "^5.88.0",
-    "webpack-cli": "^5.1.4",
+    "typescript": "^4.9.4",
+    "webpack": "^5.47.0",
+    "webpack-cli": "^4.7.2",
     "yarn": "^1.22.10"
   },
   "dependencies": {
