--- a/.npmignore
+++ b/.npmignore
@@ -1,4 +1,6 @@
 node_modules
+js
+src
 yarn.lock
 /package-lock.json
 .next
@@ -6,3 +8,5 @@ yarn.lock
 /static
 .idea
 .DS_Store
+webpack.config.js
+tsconfig.json
