--- a/package.json
+++ b/package.json
@@ -97,7 +97,8 @@
     "typescript": "^5.1.0",
     "webpack": "^5.88.0",
     "webpack-cli": "^5.1.4",
-    "yarn": "^1.22.10"
+    "yarn": "^1.22.10",
+    "hoverintent": "^2.2.1"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
